Fixed bug #50576 (XML_OPTION_SKIP_TAGSTART option has no effect).